<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.bcit.ass2.assignment2.InfoRequestActivity">

    <include layout="@layout/toolbar_main" android:id="@+id/toolbar" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/manufacturer"
        android:textSize="20dp"
        android:text="@string/manufacturer"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="22dp" />

    <TextView
        android:id="@+id/model"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/manufacturer"
        android:layout_below="@+id/manufacturer"
        android:layout_marginTop="19dp"
        android:textSize="20dp"
        android:text="@string/model" />

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/model"
        android:layout_below="@+id/model"
        android:layout_marginTop="19dp"
        android:textSize="20dp"
        android:text="@string/version" />

    <TextView
        android:id="@+id/version_release"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version_release"
        android:layout_marginTop="19dp"
        android:textSize="20dp"
        android:layout_below="@+id/version"
        android:layout_alignStart="@+id/version" />

    <TextView
        android:id="@+id/serial_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:textSize="20dp"
        android:text="@string/serial_number"
        android:layout_below="@+id/version_release"
        android:layout_alignStart="@+id/version_release" />

    <TextView
        android:id="@+id/manufacturer_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/manufacturer"
        android:textSize="20dp"
        android:layout_toEndOf="@+id/manufacturer" />

    <TextView
        android:id="@+id/model_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_alignTop="@+id/model"
        android:layout_toEndOf="@+id/version" />

    <TextView
        android:id="@+id/version_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_alignTop="@+id/version"
        android:layout_toStartOf="@+id/manufacturer_string" />

    <TextView
        android:id="@+id/version_release_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_alignTop="@+id/version_release"
        android:layout_toEndOf="@+id/version_release"
        android:layout_marginStart="12dp" />

    <TextView
        android:id="@+id/serial_number_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_alignTop="@+id/serial_number"
        android:layout_toEndOf="@+id/version_release" />

</RelativeLayout>
